vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_typeof_operand.vv
fn main() {
	typeof($embed_file(@FILE)).name == ''
}
